--- a/products.html
+++ b/products.html
@@ -84,15 +84,8 @@
     <main>
         <h1 class="main-title transformacion">CONOCE NUESTROS PRODUCTOS</h1>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12 card-container" id="tarjetas">
-
-                    <!--AQUI VAN LAS TARJETAS DE PRODUCTOS HECHAS CON JS-->
-
-                </div>
-                <!--<a href="">
-                    <i class="fa-brands fa-whatsapp"></i>
-                </a>-->
+            <div id="tarjetas" class="row">
+                <!--AQUI VAN LAS TARJETAS DE PRODUCTOS HECHAS CON JS-->
             </div>
         </div>
     </main>
@@ -137,6 +130,7 @@
         crossorigin="anonymous"></script>
 
     <!-- ARCHIVO JS -->
+    <script src="carrito.js"></script>
     <script src="app.js"></script>
 
 </body>
